--- a/slides/theme-modifications.css
+++ b/slides/theme-modifications.css
@@ -11,6 +11,14 @@
   text-shadow: 0 1px 0 #aaa, 0 2px 0 #a9a9a9, 0 3px 0 #999, 0 4px 0 #999999, 0 5px 0 #888, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 20px 20px rgba(0, 0, 0, 0.15);
 }
 
+.reveal section {
+  color: #2b2b2b;
+}
+
+.reveal section a {
+  color: #ffa630;
+}
+
 .reveal section img {
   background: none;
   border: 0;
